<resources>
    <string name="app_name">BlinkitClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="it">it</string>
    <string name="india_s_last_minute_app">india\'s last minute app</string>
    <string name="blinkit">blinkit</string>
    <string name="a_zomato_company">A ZOMATO COMPANY</string>
    <string name="india_s_best_last_minute_app">India\'s best last minute app</string>
    <string name="login_or_sign_up">Login or Sign up</string>
    <string name="enter_mobile_number">Enter mobile number</string>

</resources>